kubernetes/local-mm-transaction-api-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mm-transaction-api
  labels:
    app: mm-transaction-api
spec:
  ports:
    - port: 8082
      targetPort: 8080
      name: mm-transaction-api
  selector:
    app: mm-transaction-api
    tier: api
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mm-transaction-api
  labels:
    app: mm-transaction-api
spec:
  selector:
    matchLabels:
      app: mm-transaction-api
      tier: api
  template:
    metadata:
      labels:
        app: mm-transaction-api
        tier: api
    spec:
      containers:
      - image: np123dev/transaction_manager:latest
        name: mm-transaction-api
        ports:
        - containerPort: 8080
          name: transaction-api
---
