kubernetes/gke-mm-transaction-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mm-transaction-api
  namespace: default
spec:
  selector:
    matchLabels:
      app: mm-transaction-api
      tier: api
  template:
    metadata:
      labels:
        app: mm-transaction-api
        tier: api
    spec:
      containers:
      - image: np123dev/transaction_manager:latest
        name: mm-transaction-api
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api/health/readiness
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/health/liveness
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
        resources:
          limits:
            cpu: 400m
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: mm-transaction-api
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: mm-transaction-api
    tier: api
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mm-transaction-api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "transaction-api-ip"
spec:
  defaultBackend:
    service:
      name: mm-transaction-api
      port:
        number: 8080
